# opentld_tracker_ros

./: README.MD
cmt_tracker/: CMakeLists.txt  package.xml
cmt_tracker/launch/: cmt_tracker_mt.launch  cmt_tracker_usb.launch
cmt_tracker/src/: image_tracker_node.cpp  main.cpp  tracker_node.cpp
ctracking/: CMakeLists.txt  package.xml
ctracking/src/: CompressiveTracker.cpp  RunTracker.cpp
monitorui/: CMakeLists.txt  mainpage.dox  package.xml
monitorui/include/monitorui/: QTrackLabel.hpp  main_window.hpp  qnode.hpp
monitorui/launch/: monitorui_cmt_mt.launch  monitorui_cmt_usb.launch  monitorui_dlib_usb.launch  monitorui_tld_usb.launch
monitorui/src/: QTrackLabel.cpp  main.cpp  main_window.cpp  qnode.cpp
monitorui/ui/: main_window.ui
object_tracker/: CMakeLists.txt  package.xml
object_tracker/launch/: dlib_tracker_usb.launch
object_tracker/src/: dlib_tracker.cpp  image_tracking_ex.cpp  video_tracking_ex.cpp
tld_tracker/: CMakeLists.txt  package.xml
tld_tracker/launch/: tld_tracker_usb.launch  tld_tracker_usb1.launch
tld_tracker/src/libopentld/imacq/: ImAcq.cpp
tld_tracker/src/opentld/: CMakeLists.txt  OpenTLD.cpp  OpenTLDRos.cpp
tld_tracker/src/opentld/main/: Config.cpp  Config.h  Main.cpp  Main.h
